component("wpkg") {
  sources = [
    "../content/browser/webauth/cbor/cbor_binary.h",
    "../content/browser/webauth/cbor/cbor_reader.cc",
    "../content/browser/webauth/cbor/cbor_reader.h",
    "../content/browser/webauth/cbor/cbor_values.cc",
    "../content/browser/webauth/cbor/cbor_values.h",
    "../content/browser/webauth/cbor/cbor_writer.cc",
    "../content/browser/webauth/cbor/cbor_writer.h",
    "webpackage_reader.cc",
    "webpackage_reader.h",
  ]
  defines = [ "WPKG_IMPLEMENTATION" ]
  public_deps = [
    "//base",
    "//net",
  ]

  if (is_linux || is_android) {
    public_deps += [ "//buildtools/third_party/libc++" ]
  }
}
executable("wpkgtest") {
  sources = [
    "main.cc",
  ]
  public_deps = [
    ":wpkg",
    "//base",
    "//net",
  ]
  if (is_linux || is_android) {
    public_deps += [ "//buildtools/third_party/libc++" ]
  }
}
