# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/android/config.gni")
import("//build/config/android/rules.gni")

webview_public_framework_ijar = "frameworks.public.interface.jar"

generate_interface_jar("public_framework_ijar") {
  input_jar = webview_public_framework_jar
  output_jar = "$target_out_dir/$webview_public_framework_ijar"
}

android_library("support_lib_prototype_java") {
  java_files = [
    "java/src/org/chromium/android_webview_glue/GlueWebViewClient.java",
    "java/src/org/chromium/android_webview_glue/GlueWebViewContentsClientAdapter.java",

    #"java/src/org/chromium/android_webview_glue/GlueWebViewFactoryProvider.java",
    "java/src/org/chromium/android_webview_glue/GlueWebViewProvider.java",
    "java/src/org/chromium/android_webview_glue/WebResourceError.java",
    "java/src/org/chromium/android_webview_glue/WebResourceRequest.java",
  ]

  alternative_android_sdk_ijar_dep = ":public_framework_ijar"
  _ijar = webview_public_framework_ijar
  _ijar_dir = get_label_info(alternative_android_sdk_ijar_dep, "target_out_dir")
  alternative_android_sdk_ijar = "$_ijar_dir/$_ijar"

  deps = [
    "//android_webview:android_webview_commandline_java",
    "//android_webview:android_webview_java",
    "//android_webview/webview_delegate:webview_delegate_java",
    "//base:base_java",
    "//components/autofill/android:provider_java",
    "//content/public/android:content_java",
    "//net/android:net_java",
    "//ui/android:ui_java",
  ]
}
