# Copyright 2017 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/android/rules.gni")

android_library("webview_license_provider_java") {
  java_files = [ "//android_webview/webview_apk/java/src/com/android/webview/chromium/LicenseContentProvider.java" ]
}

android_library("webview_license_activity_java") {
  java_files = [ "//android_webview/webview_apk/java/src/com/android/webview/chromium/LicenseActivity.java" ]
}
