# Copyright 2017 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//mojo/public/tools/bindings/mojom.gni")

mojom("mojom") {
  sources = [
    "values.mojom",
  ]
}

mojom("test_interfaces") {
  sources = [
    "values_tester.mojom",
  ]

  public_deps = [
    ":mojom",
  ]

  testonly = true
}
