# Copyright (c) 2017 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# This is a dependency-free, header-only, library, and it needs to stay that
# way to facilitate pulling it into various third-party projects. So, this
# file is here to protect against accidentally introducing dependencies.
source_set("internal") {
  sources = [
    "checked_math.h",
    "clamped_math.h",
    "safe_conversions.h",
    "safe_math.h",
  ]
}

source_set("base_numerics") {
  deps = [
    ":internal",
  ]
  sources = [
    "checked_math.h",
    "clamped_math.h",
    "safe_conversions.h",
    "safe_math.h",
  ]
}
