# Copyright 2017 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//chromecast/chromecast.gni")
import("//testing/test.gni")

assert(!is_fuchsia)

cast_executable("tracing_service") {
  sources = [
    "ftrace.cc",
    "ftrace.h",
    "tracing_service_main.cc",
  ]

  deps = [
    "//base",
  ]
}

cast_source_set("system_tracer") {
  sources = [
    "system_tracer.cc",
    "system_tracer.h",
  ]

  deps = [
    "//base",
  ]
}

group("tracing") {
  deps = [
    ":tracing_service",
  ]
}
