# Copyright 2017 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/chrome_build.gni")
import("//build/config/features.gni")
import("//build/config/ui.gni")
import("//printing/features/features.gni")
import("//rlz/features/features.gni")
import("//testing/test.gni")
import("//tools/grit/repack.gni")

if (is_android) {
  import("//build/config/android/rules.gni")
}

static_library("about_ui") {
  sources = [
    "credit_utils.cc",
    "credit_utils.h",
  ]

  deps = [
    "android:about_ui_jni_headers",
    "//base",
    "//third_party/brotli:dec",
    "//ui/base",
    "//ui/resources",
  ]
}
